@@ -106,7 +106,7 @@ FS20_Initialize($)
   $hash->{DefFn}     = "FS20_Define";
   $hash->{UndefFn}   = "FS20_Undef";
   $hash->{ParseFn}   = "FS20_Parse";
-  $hash->{AttrList}  = "IODev follow-on-for-timer:1,0 do_not_notify:1,0 dummy:1,0 showtime:1,0 model;fs20hgs,fs20hgs,fs20pira,fs20piri,fs20s20,fs20s8,fs20s4,fs20s4a,fs20s4m,fs20s4u,fs20s4ub,fs20sd,fs20sn,fs20sr,fs20ss,fs20str,fs20tfk,fs20tfk,fs20tk,fs20uts,fs20ze,fs20as1,fs20as4,fs20di,fs20du,fs20ls,fs20ms2,fs20rst,fs20sa,fs20sig,fs20st,fs20sv,fs20usr loglevel:0,1,2,3,4,5,6";
+  $hash->{AttrList}  = "IODev follow-on-for-timer:1,0 do_not_notify:1,0 ignore:0,1 dummy:1,0 showtime:1,0 model;fs20hgs,fs20hgs,fs20pira,fs20piri,fs20s20,fs20s8,fs20s4,fs20s4a,fs20s4m,fs20s4u,fs20s4ub,fs20sd,fs20sn,fs20sr,fs20ss,fs20str,fs20tfk,fs20tfk,fs20tk,fs20uts,fs20ze,fs20as1,fs20as4,fs20di,fs20du,fs20ls,fs20ms2,fs20rst,fs20sa,fs20sig,fs20st,fs20sv,fs20usr loglevel:0,1,2,3,4,5,6";
 
 }
 
@@ -206,8 +206,7 @@ FS20_Set($@)
     return "Specified timeout too large, max is 15360" if(length($c) == 2);
   }
 
-  IOWrite($hash, "04", "010101" . $hash->{XMIT} . $hash->{BTN} . $c)
-    	if(!IsDummy($a[0]));
+  IOWrite($hash, "04", "010101" . $hash->{XMIT} . $hash->{BTN} . $c);
 
   ###########################################
   # Set the state of a device to off if on-for-timer is called
@@ -355,6 +354,8 @@ FS20_Parse($$)
     foreach my $n (keys %{ $def }) {
       my $lh = $def->{$n};
       $n = $lh->{NAME};        # It may be renamed
+
+      return "" if(IsIgnored($n));   # Little strange.
 
       $lh->{CHANGED}[0] = $v;
       $lh->{STATE} = $v;
